--- a/web/app/cenozo/modal-confirm.tpl.html
+++ b/web/app/cenozo/modal-confirm.tpl.html
@@ -1,9 +1,9 @@
 <form ng-submit="yes()" class="noselect">
-  <div class="modal-header">
+  <div class="modal-header bg-primary">
     <h4 class="modal-title">{{ title }}</h4>
   </div>
   <div class="modal-body">{{ message }}</div>
-  <div class="modal-footer">
+  <div class="modal-footer bg-info">
     <button type="button" class="btn btn-default" ng-click="no()">&#x2718 No</button>
     <button type="submit" class="btn btn-primary">&#x2714 Yes</button>
   </div>
