--- a/web/app/cenozo/modal-datetime.tpl.html
+++ b/web/app/cenozo/modal-datetime.tpl.html
@@ -1,5 +1,5 @@
 <form ng-submit="ok()" class="noselect">
-  <div class="modal-header">
+  <div class="modal-header bg-primary">
     <h4 class="modal-title">Select a value for {{ local.title }}</h4>
   </div>
   <div class="modal-body">
@@ -85,7 +85,7 @@
       </div>
     </div>
   </div>
-  <div class="modal-footer">
+  <div class="modal-footer bg-info">
     <div class="btn-group pull-left">
       <button ng-if="'date' != local.pickerType"
               type="button"
