--- a/web/app/cenozo/modal-participant-note.tpl.html
+++ b/web/app/cenozo/modal-participant-note.tpl.html
@@ -1,5 +1,5 @@
 <form ng-submit="ok()" novalidate name="form" class="noselect">
-  <div class="modal-header">
+  <div class="modal-header bg-primary">
     <button type="button" class="close" ng-click="close()">&times;</button>
     <h4 class="modal-title">Notes for {{ participant.uid }}</h4>
   </div>
@@ -54,7 +54,7 @@
       </div>
     </div>
   </div>
-  <div class="modal-footer">
+  <div class="modal-footer bg-info">
     <button type="button" class="btn btn-primary" ng-click="close()">Close</button>
   </div>
 </form>
