--- a/web/app/cenozo/modal-password.tpl.html
+++ b/web/app/cenozo/modal-password.tpl.html
@@ -1,5 +1,5 @@
 <form ng-submit="ok()" novalidate name="form" class="noselect">
-  <div class="modal-header">
+  <div class="modal-header bg-primary">
     <h4 class="modal-title">Change Password</h4>
   </div>
   <div class="modal-body">
@@ -68,7 +68,7 @@
       </div>
     </div>
   </div>
-  <div class="modal-footer">
+  <div class="modal-footer bg-info">
     <button type="button" class="btn btn-info pull-left" ng-click="toggleShowPasswords()">
       {{ showPasswords ? 'Hide' : 'Show' }} Passwords
     </button>
