--- a/web/app/cenozo/modal-restrict.tpl.html
+++ b/web/app/cenozo/modal-restrict.tpl.html
@@ -1,5 +1,5 @@
 <form ng-submit="ok( local.restrictList )" class="noselect">
-  <div class="modal-header">
+  <div class="modal-header bg-primary">
     <h4 class="modal-title">Restrict listing</h4>
   </div>
   <div class="modal-body">
@@ -228,7 +228,7 @@
       </div>
     </div>
   </div>
-  <div class="modal-footer">
+  <div class="modal-footer bg-info">
     <button type="button" class="btn btn-info pull-left"
             ng-click="local.addRestriction()">Add Condition</button>
     <button type="button" class="btn btn-default"
