--- a/web/app/cenozo/modal-site-role.tpl.html
+++ b/web/app/cenozo/modal-site-role.tpl.html
@@ -1,5 +1,5 @@
 <form ng-submit="ok()" novalidate name="form" class="noselect">
-  <div class="modal-header">
+  <div class="modal-header bg-primary">
     <h4 class="modal-title">Select a Site and Role</h4>
   </div>
   <div class="modal-body">
@@ -29,7 +29,7 @@
       </div>
     </div>
   </div>
-  <div class="modal-footer">
+  <div class="modal-footer bg-info">
     <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
     <button type="submit" class="btn btn-primary">OK</button>
   </div>
