--- a/web/app/cenozo/modal-timezone.tpl.html
+++ b/web/app/cenozo/modal-timezone.tpl.html
@@ -1,5 +1,5 @@
 <form ng-submit="ok()" novalidate name="form" class="noselect">
-  <div class="modal-header">
+  <div class="modal-header bg-primary">
     <h4 class="modal-title">Select a Timezone</h4>
   </div>
   <!-- this model-body requires a specialized style so that the typeahead displays correctly -->
@@ -35,7 +35,7 @@
       </div>
     </div>
   </div>
-  <div class="modal-footer">
+  <div class="modal-footer bg-info">
     <div class="btn-group pull-left">
       <button type="button" class="btn btn-info" ng-click="siteTimezone()">Current Site</button>
     </div>
