--- a/web/app/cenozo/modal-value.tpl.html
+++ b/web/app/cenozo/modal-value.tpl.html
@@ -1,5 +1,5 @@
 <form ng-submit="ok( value )" class="noselect">
-  <div class="modal-header">
+  <div class="modal-header bg-primary">
     <h4 class="modal-title">{{ title }}</h4>
   </div>
   <div class="modal-body">
@@ -16,7 +16,7 @@
       ng-model="value"
       class="form-control"></select>
   </div>
-  <div class="modal-footer">
+  <div class="modal-footer bg-info">
     <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
     <button type="submit" class="btn btn-primary">OK</button>
   </div>
