--- a/web/app/cenozo/view-frame.tpl.html
+++ b/web/app/cenozo/view-frame.tpl.html
@@ -1,3 +1,3 @@
-<div class="inner-view-frame fade-transition">
-  <div ui-view></div>
+<div class="inner-view-frame fade-transition table">
+  <div ui-view class="table"></div>
 </div>
