--- a/web/app/error/403.tpl.html
+++ b/web/app/error/403.tpl.html
@@ -1,11 +1,13 @@
-<div class="inner-view-frame">
-  <div class="container-fluid">
+<div class="inner-view-frame table">
+  <div class="container-fluid table">
     <h3 class="text-primary">Forbidden (403)</h3>
     <div class="container-fluid">
-      Sorry, but the <strong>{{ model.role.name }}</strong> role does not have access to the page or action
-      have you requested.<br />
-      Please try logging in under a different role and try again, <a ng-click="reload()">reload</a> the page
-      or <a ng-click="back()">go back</a> to the previous page.
+      <blockquote>
+        Sorry, but the <strong>{{ model.role.name }}</strong> role does not have access to the page or action
+        have you requested.<br />
+        Please try logging in under a different role and try again, <a ng-click="reload()">reload</a> the page
+        or <a ng-click="back()">go back</a> to the previous page.
+      </blockquote>
     </div>
   </div>
 </div>
