--- a/web/app/error/404.tpl.html
+++ b/web/app/error/404.tpl.html
@@ -1,9 +1,11 @@
-<div class="inner-view-frame">
-  <div class="container-fluid">
+<div class="inner-view-frame table">
+  <div class="container-fluid table">
     <h3 class="text-primary">Page not found (404)</h3>
     <div class="container-fluid">
-      Sorry, but the page you requested does not exist.
-      Please <a ng-click="back()">go back</a> to the previous page.
+      <blockquote>
+        Sorry, but the page you requested does not exist.
+        Please <a ng-click="back()">go back</a> to the previous page.
+      </blockquote>
     </div>
   </div>
 </div>
