--- a/web/app/root/wait.tpl.html
+++ b/web/app/root/wait.tpl.html
@@ -1,6 +1,7 @@
-<div class="inner-view-frame">
-  <div class="container-fluid">
-    <h3 class="text-primary">Please wait...</h3>
+<div class="inner-view-frame table">
+  <div class="container-fluid table">
+    <h3 class="text-primary text-center">Waiting for a response from the server</h3>
+    <div class="loader"></div>
   </div>
 </div>
 <div class="gradient-footer"></div>
