--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -215,7 +215,7 @@
       </div>
     </ng-form>
   </div>
-  <div class="form-footer text-right rounded-bottom">
+  <div class="form-footer text-right rounded-bottom bg-info">
     <button type="button" class="btn btn-default" ng-click="back()">Cancel</button>
     <button type="button" class="btn btn-primary" ng-click="submit()">
       <i class="glyphicon glyphicon-cloud-upload"></i> Save
