--- a/web/app/error/400.tpl.html
+++ b/web/app/error/400.tpl.html
@@ -1,5 +1,5 @@
-<div class="inner-view-frame table">
-  <div class="container-fluid table">
+<div class="inner-view-frame">
+  <div class="container-fluid bg-white">
     <h3 class="text-primary">Bad Request (400)</h3>
     <div class="container-fluid">
       <blockquote>
