--- a/web/app/root/home.tpl.html
+++ b/web/app/root/home.tpl.html
@@ -1,9 +1,9 @@
-<div class="inner-view-frame table" ng-switch="model.isLoading">
-  <div class="container-fluid table" ng-switch-when="true">
+<div class="inner-view-frame" ng-switch="model.isLoading">
+  <div class="container-fluid bg-white" ng-switch-when="true">
     <h3 class="text-primary text-center">Waiting for a response from the server</h3>
     <div class="loader"></div>
   </div>
-  <div class="container-fluid table" ng-switch-when="false">
+  <div class="container-fluid bg-white" ng-switch-when="false">
     <h3 class="text-primary">Welcome to {{ model.application.title }} version {{ model.application.version }}</h3>
     <div class="container-fluid">
       You are currently logged on as
