--- a/web/app/root/wait.tpl.html
+++ b/web/app/root/wait.tpl.html
@@ -1,5 +1,5 @@
-<div class="inner-view-frame table">
-  <div class="container-fluid table">
+<div class="inner-view-frame">
+  <div class="container-fluid bg-white">
     <h3 class="text-primary text-center">Waiting for a response from the server</h3>
     <div class="loader"></div>
   </div>
