Better handling of drop-down lists with a single item

--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -8,7 +8,7 @@
         <label for="{{ input.key }}" class="col-sm-3 control-label" tooltip="{{ input.help }}">{{ input.title }}</label>
         <div class="col-sm-9">
           <div class="input-group"
-               ng-switch="input.type"
+               ng-switch="input.type|cnViewType"
                ng-class="{ 'has-feedback has-error': innerForm.name.$dirty && innerForm.name.$invalid }">
             <input ng-switch-when="string"
               ng-attr-id="{{ input.key }}"
@@ -50,45 +50,6 @@
               placeholder="(Type the first few letters to search possible values)"
               autocomplete="off"
               ng-required="model.metadata.columnList[input.key].required"></input>
-            <input ng-switch-when="date"
-              ng-attr-id="{{ input.key }}"
-              name="name"
-              ng-model="record[input.key]"
-              ng-required="model.metadata.columnList[input.key].required"
-              type="hidden"></input>
-            <input ng-switch-when="date"
-              ng-model="formattedRecord[input.key]"
-              cn-change="check( input.key )"
-              class="form-control"
-              type="text"
-              ng-click="selectDatetime( input )"
-              onkeydown="return false"></input>
-            <input ng-switch-when="time"
-              ng-attr-id="{{ input.key }}"
-              name="name"
-              ng-model="record[input.key]"
-              ng-required="model.metadata.columnList[input.key].required"
-              type="hidden"></input>
-            <input ng-switch-when="time"
-              ng-model="formattedRecord[input.key]"
-              cn-change="check( input.key )"
-              class="form-control"
-              type="text"
-              ng-click="selectDatetime( input )"
-              onkeydown="return false"></input>
-            <input ng-switch-when="timesecond"
-              ng-attr-id="{{ input.key }}"
-              name="name"
-              ng-model="record[input.key]"
-              ng-required="model.metadata.columnList[input.key].required"
-              type="hidden"></input>
-            <input ng-switch-when="timesecond"
-              ng-model="formattedRecord[input.key]"
-              cn-change="check( input.key )"
-              class="form-control"
-              type="text"
-              ng-click="selectDatetime( input )"
-              onkeydown="return false"></input>
             <input ng-switch-when="datetime"
               ng-attr-id="{{ input.key }}"
               name="name"
@@ -102,27 +63,14 @@
               type="text"
               ng-click="selectDatetime( input )"
               onkeydown="return false"></input>
-            <input ng-switch-when="datetimesecond"
-              ng-attr-id="{{ input.key }}"
-              name="name"
-              ng-model="record[input.key]"
-              ng-required="model.metadata.columnList[input.key].required"
-              type="hidden"></input>
-            <input ng-switch-when="datetimesecond"
-              ng-model="formattedRecord[input.key]"
-              cn-change="check( input.key )"
-              class="form-control"
-              type="text"
-              ng-click="selectDatetime( input )"
-              onkeydown="return false"></input>
-            <select ng-switch-default
+            <select ng-switch-when="select"
               ng-attr-id="{{ input.key }}"
               name="name"
               ng-options="item.value as item.name for item in input.enumList"
               ng-model="record[input.key]"
-              cn-change="check( input.key )"
+              ng-change="check( input.key )"
               class="form-control"
-              ng-readonly="input.constant || !input.enumList"
+              ng-disabled="input.constant || !input.enumList || 1 >= input.enumList.length"
               ng-required="model.metadata.columnList[input.key].required"></select>
             <textarea ng-switch-when="text"
               ng-attr-id="{{ input.key }}"
