--- a/web/app/application/view.tpl.html
+++ b/web/app/application/view.tpl.html
@@ -1,4 +1,7 @@
 <cn-record-view model="model"></cn-record-view>
+<div class="vertical-spacer" ng-repeat="child in model.choosing" ng-if="showChildren">
+  <cn-record-list model="model.viewModel[child.camel+'Model']"></cn-record-list>
+</div>
 <div class="vertical-spacer" ng-repeat="child in model.children" ng-if="showChildren">
   <cn-record-list model="model.viewModel[child.camel+'Model']"></cn-record-list>
 </div>
