--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -14,7 +14,7 @@
       <ng-form ng-repeat="input in dataArray"
                name="innerForm">
         <div class="form-group"
-             ng-if="'identifier' != input.type"
+             ng-if="'identifier' != input.type && 'hidden' != input.type"
              ng-class="{ 'has-feedback has-error': innerForm.name.$dirty && innerForm.name.$invalid }">
           <label for="{{ input.key }}" class="col-sm-3 control-label" tooltip="{{ input.help }}">
             {{ input.title }}
