Replacing ... with a hellip

--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -6,7 +6,7 @@
          ng-click="refresh()"
          tooltip="Click to refresh data"
          tooltip-placement="left"></i>
-      {{ heading }}{{ model.editEnabled ? '' : ' (read only)' }} <span ng-if="!isComplete">(Loading...)</span>
+      {{ heading }}{{ model.editEnabled ? '' : ' (read only)' }} <span ng-if="!isComplete">(Loading&hellip;)</span>
     </h4>
   </div>
   <form name="form" class="form-horizontal" novalidate>
