--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -50,7 +50,7 @@
     <tbody>
       <tr ng-if="model.listModel.isLoading">
         <td colspan="{{ numColumns }}" style="background-color: white">
-          <div class="loader" tooltip="Loading..."></div>
+          <div class="loader" tooltip="Loading&hellip;"></div>
         </td>
       </tr>
       <tr ng-if="!model.listModel.isLoading && 0 == model.listModel.cache.length">
