--- a/web/app/cenozo/tree.tpl.html
+++ b/web/app/cenozo/tree.tpl.html
@@ -1,3 +1,3 @@
-<div ng-repeat="root in model">
-  <cn-tree-branch is-root="true" model="root"></cn-tree-branch>
-</div>
+<ul class="nopadding tree" ng-repeat="root in model">
+  <cn-tree-branch model="root" last="$last"></cn-tree-branch>
+</ul>
